# what-dog-breed

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tg_bot.py
configs/: config.yaml
configs/bot/: bot.yaml
configs/data/: dataset.yaml  preprocessing.yaml
configs/dataset/: dataset.yaml  paths.yaml  preprocessing.yaml
configs/exports/: exports.yaml
configs/mlflow/: mlflow.yaml
configs/model/: freezing.yaml  model.yaml  optimizer.yaml
configs/train/: mlflow.yaml  train.yaml
dog_breed_detector/: config.py
dog_breed_detector/bot/: bot.py  run_bot.py
dog_breed_detector/callbacks/: mlflow_callback.py
dog_breed_detector/dataset/: dataset.py  download_data.py
dog_breed_detector/exports/: extract_model.py  onnx_export.py
dog_breed_detector/inference/: inference.py
dog_breed_detector/model/: vit_model.py
dog_breed_detector/train/: train.py  utils.py
