[project]
name = "what-dog-breed"
version = "0.1.0"
authors = [
    {name = "nik"},
]
description = "Определяет породу собаки по фото"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "pillow>=9.5.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "opencv-python>=4.7.0; platform_system != 'Darwin'",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "kaggle>=1.7.4.5",
]

